--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -10,3 +10,67 @@ body {
     font-size: 18px;
     margin-bottom: 0.5rem;
 }
+
+.lots {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1rem;
+}
+
+.lots1 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.lot-item {
+    display: flex;
+    flex-flow: column;
+    border: 1px outset grey;
+    border-radius: 1rem;
+    padding: 2rem;
+}
+
+.lot-item1 {
+    border: 1px outset grey;
+    border-radius: 1rem;
+    padding: 2rem;
+}
+
+.lot-item>img {
+    order: -1;
+    align-self: center;
+}
+
+.lot-item1>img {
+    order: -1;
+    align-self: center;
+}
+
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: white;
+}
+
+.button {
+    margin-top: auto;
+    background: teal;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    text-align: center;
+    outline: none !important;
+}
+
+.button:hover {
+    background-color: white;
+    color: black;
+    box-shadow: 0 0 10px gray;
+}
+
+.lot-item>h5 {
+    margin: 1rem 1rem 0;
+}
