--- a/auctions/templates/auctions/createLot.html
+++ b/auctions/templates/auctions/createLot.html
@@ -26,7 +26,7 @@ Create a new Lot - {{block.super}}
 
         <div class="form-group mt-2">
             <label for="description">Description</label>
-            <textarea class="form-control" name="description" rows="3"
+            <textarea class="form-control" name="description" rows="3" maxlength="70"
                 placeholder="Enter Description of Product"></textarea>
         </div>
         <p></p>
