--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -14,7 +14,7 @@ Active Listings - {{block.super}}
 </nav>
 <main class='lots'>
     {% for lot in lots  %}
-    <div class = 'lot-item'>
+    <article class = 'lot-item'>
                     <h5>{{lot.lot_name}}</h5>
                     <ul>
                         <li><strong>Description: </strong>{{lot.lot_description}}</li>
@@ -23,9 +23,9 @@ Active Listings - {{block.super}}
                         <li><strong>Listed by: </strong>{{lot.lot_author}}</li>
                         <li><small>{{lot.lot_date}}</small></li>
                     </ul>
-                    <img src="{{lot.lot_image}}" width="300" height="200">
+                    <img src="{{lot.lot_image}}" width="200">
                     <a href="{% url 'lot' lot.id %}" class="button">Lot Detailes</a>
-    </div>
+    </article>
 {% endfor %}
 </main>
 {% endblock %}
