--- a/auctions/templates/auctions/lotbycategory.html
+++ b/auctions/templates/auctions/lotbycategory.html
@@ -6,9 +6,9 @@
 
 {% block body %}
 <h1>{{category.name}}</h1>   
-<main class='lots1'>
+<main class='lots'>
     {% for item in items  %}
-    <div class = 'lot-item1'>
+    <div class = 'lot-item'>
                     <h5 class="card-title">{{item.lot_name}}</h5>
                     <ul>
                         <li><strong>Description: </strong>{{item.lot_description}}</li>
