--- a/auctions/templates/auctions/lotbycategory.html
+++ b/auctions/templates/auctions/lotbycategory.html
@@ -17,7 +17,7 @@
                         <li><strong>Listed by: </strong>{{item.lot_author}}</li>
                         <li><small>{{item.lot_date}}</small></li>
                     </ul>
-                    <img src="{{item.lot_image}}" class="img-fluid rounded-start" width="300" height="300">
+                    <img src="{{item.lot_image}}">
     </div>
 {% endfor %}
 </main>
