--- a/auctions/templates/auctions/products.html
+++ b/auctions/templates/auctions/products.html
@@ -8,7 +8,7 @@
         <ul>
             <li>{{product.description}}</li>
         </ul>
-        <img src="{{product.image}}" width="300" height="200">
+        <img src="{{product.image}}">
         <a href="{{product.detailed}} " class="button ">Detailed</a>
     </div>
     {% endfor %}
