--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,5 +1,8 @@
 body {
     padding: 10px;
+    background-color: #6b2d5c;
+    background-image: linear-gradient(316deg, #6b2d5c 10%, #e0e5e5 74%);
+    background-size: cover;
 }
 
 .card {
@@ -67,7 +70,7 @@ a.button {
 
 .button {
     margin-top: auto;
-    background: teal;
+    background: #6b2d5c;
     padding: 0.5rem;
     border: none;
     border-radius: 1rem;
